Update lightning to 0.17.4

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: lightning
 category: bitcoin
 name: Lightning Node
-version: "v0.17.3-beta"
+version: "v0.17.4-beta"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,13 +22,13 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This release updates LND from version 0.17.2-beta to 0.17.3-beta. 
+  This release updates LND from version 0.17.3-beta to 0.17.4-beta. 
 
 
-  - LND 0.17.3-beta fixes multiple concurrency and memory related bugs. Memory consumption for lnd nodes running with bitcoind using the rpcpolling has been significantly reduced (previously scaled with total mempool size).
+  This is a hot fix release that fixes multiple bugs: Channel open hanging until restart, a memory leak when using polling mode for bitcoind, sync getting lost for pruned nodes and the REST proxy not working when TLS certificate encryption is turned on.
 
 
-  - Full release notes are found at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/
+  Full release notes are found at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/
 
 
   🔔 In case you missed it, a previous release of the Lightning Node app (v0.17.0-beta) brought the option to run your node in hybrid mode or Tor-only mode, along with the ability to open private channels, receive keysend payments, bugfixes, and more!
