Update plex to 1.40.0

--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   server:
-    image: linuxserver/plex:version-1.32.8.7639-fb6452ebf@sha256:8e038b79487919c2aefe976b690067df88113aec21a3d490837584f958c72412
+    image: linuxserver/plex:1.40.0@sha256:3bc1444e7e8a91dfa0735b1878b4f0eb39c680e97ed419149f74ef24cd1c9222
     restart: on-failure
     hostname: "${DEVICE_HOSTNAME}"
     environment:
