--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: plex
 category: media
 name: Plex
-version: "1.32.8.7639"
+version: "1.40.0"
 tagline: Stream Movies & TV Shows
 description: >-
   Stream movies and TV shows, plus 300+ channels of live TV, instantly, without a subscription. Watch live TV and movies anywhere, from any device, with Plex.
@@ -31,28 +31,26 @@ permissions:
 releaseNotes: >-
   NEW:
   
-  - (Web) Updated to 4.116.1
+  - Items added to a collection from the item context menu will now lock the collection field on the items
+
+  - Store track genres and add filtering options
+
+  - Support ID3v2.4 null-separated tags for genres and release type
+
+  - No longer create a view history entry for items marked as played
 
 
   FIXES:
 
-  - (Library) “Episode sorting” and “Album sorting” preferences had meaningless “Library default” global library setting (#14522)
+  - Changing a ‘Other Videos’ type library to the modern movie agent would fail
 
-  - (Library) The default season sort order in TV libraries may not work as intended (#14570)
+  - It is possible that agents are not initialised during startup on rare occasions
 
-  - (LiveTV) Transcoded video would fail to play in some circumstances (#14539)
+  - Server could become unresponsive when collection membership changes
 
-  - (Metadata) Items could lose metadata if a refresh request failed due to a network failure (#14551)
+  - When performing fix match on items from certain music libraries the language would default to Arabic
 
-  - (Player) Controlling a player didn’t work in some cases (#14567)
-
-  - (Sharing) Sharing a single episode was not playable by sharee (#14559)
-
-  - (Transcoder) HW transcoding failed on GeminiLake CPUs when running on linux (#14465)
-
-  - (Transcoder) Videos HW encoded on the shield would display a black screen on some devices (#14384)
-
-  - (Updater) Windows Updater would hang when run with PMSService (#14322)
+  - and many more
  
 
   See full release notes here: https://www.videohelp.com/software/Plex
