Update ghostfolio to 2.51.0

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "2.28.0"
+version: "2.51.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,21 +31,30 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This release upgrades Ghostfolio from v2.14.0 to v2.28.0, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
+  This release upgrades Ghostfolio from v2.28.0 to v2.51.0, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
   
 
   Added:
 
-    - Added a historical cash balances table to the account detail dialog
-    - Introduced a 'HasPermission' annotation for endpoints
+    - Introduced a setting to disable the data gathering in the admin control
+
+    - Added a button to apply the active filters in the assistant
+
 
   Changed:
 
-    - Relaxed the check for duplicates in the preview step of the activities import (allow same day)
-    - Respected the 'withExcludedAccounts' flag in the account balance time series
+
+    - Improved the ordered list of the Top 3 and Bottom 3 performers on the analysis page in Safari
+
+    - Harmonized the environment variables of various API keys
+
+    - Moved the assistant from experimental to general availability
   
+
   Fixed:
-    - Changed the mechanism of the 'INTRADAY' data gathering to operate synchronously avoiding database deadlocks
+
+    - Fixed the date conversion of the import of historical market data in the admin control panel
+    
 
   For full release notes and additional changes from previous versions, please visit: https://github.com/ghostfolio/ghostfolio/releases
 submitter: BeauAgst
