Update LNBits to 0.12.1

--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
   
   web:
-    image: lnbitsdocker/lnbits-legend:0.11.3@sha256:7c6ac2b3506c894c5a3f816a333fdfb2fcdd6ee0837285eb1d16297a88bbc70b
+    image: lnbits/lnbits:0.12.1@sha256:5e0cd330f8ce4c8d1145e90b073f321e6068d2b79b70a3029f72030ab626125a
     init: true
     restart: on-failure
     stop_grace_period: 1m
