--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: bitcoin
 name: LNbits
-version: "0.11.3"
+version: "0.12.1"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -41,14 +41,14 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  This release updates LNbits to 0.11.3, and includes various bug fixes, improvements, and new features.
+  This release update takes LNBits to 0.12.1, and includes many major changes:
 
 
-  - New service fee settings that lets you earn a transaction fee for all internal or external transaction on an LNbits instance.
+  - New powerful login system (Auth, Login, OAuth, create account with username and password)
 
-  - New funding source: Alby wallet
+  - Better tools for querying transactions
 
-  - Fiat balance in wallet 
+  - Mobile UI improvements 
 
   - LND REST bug fixes
 
