tweak release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,7 +45,8 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ Your mobile app must be on at least version 1.91.0 to work with this release of Immich.
+  ⚠️ Your mobile app must be on at least version 1.94.0 to work with this release of Immich.
+
 
   This update takes Immich to version 1.94.1, and includes the following changes:
 
@@ -54,6 +55,9 @@ releaseNotes: >-
   - Additional video transcoding options for audio and video codecs.
 
   - Automatically update the external libraries when the filesystem changes
+
+  - and more!
+
 
   Full release notes are found at: https://github.com/immich-app/immich/releases
 developer: Alex Tran
