Update Immich to v1.94.1 (#970)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.91.4"
+version: "v1.94.1"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -45,11 +45,18 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ Your mobile app must be on at least version 1.91.0 to work with this release of Immich.
+  ⚠️ Your mobile app must be on at least version 1.94.0 to work with this release of Immich.
 
 
-  🚨 iOS Live Photos uploaded after v1.89.0 that are not linked need to be deleted and re-uploaded from the mobile app.
-  This is a one-time action, and future live photos uploaded from the mobile app will be properly linked together.
+  This update takes Immich to version 1.94.1, and includes the following changes:
+
+  - Search for people on the people page.
+
+  - Additional video transcoding options for audio and video codecs.
+
+  - Automatically update the external libraries when the filesystem changes
+
+  - and more!
 
 
   Full release notes are found at: https://github.com/immich-app/immich/releases
