--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -34,4 +34,4 @@ services:
       LNBITS_ADMIN_EXTENSIONS: "ngrok"
       LNBITS_ADMIN_UI: "true"
       SUPER_USER: "$APP_PASSWORD"
-      AUTH_ALLOWED_METHODS: "user-id-only, username-password"
+      AUTH_ALLOWED_METHODS: "user-id-only, username-password, google-auth, github-auth, keycloak-auth"
