--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -35,3 +35,4 @@ services:
       LNBITS_ADMIN_UI: "true"
       SUPER_USER: "$APP_PASSWORD"
       AUTH_ALLOWED_METHODS: "user-id-only, username-password, google-auth, github-auth, keycloak-auth"
+      OAUTHLIB_INSECURE_TRANSPORT: "1"
