--- a/freshrss/docker-compose.yml
+++ b/freshrss/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: freshrss_server_1
       APP_PORT: 80
+      PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
     image: linuxserver/freshrss:1.22.1@sha256:705b4a5a1b50244ead4002f8c04f0c4e0ae9750a618e75cd73a9258c6b0a381c
