--- a/freshrss/umbrel-app.yml
+++ b/freshrss/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: freshrss
 category: social
 name: FreshRSS
-version: "1.22.1"
+version: "1.23.1"
 tagline: A free, self-hostable aggregator for rss feeds
 description: >-
   FreshRSS is an RSS aggregator and reader. It enables you to seamlessly read and follow content from multiple websites at
@@ -23,7 +23,9 @@ description: >-
   
   - and more!
 releaseNotes: >-
-  This release updates FreshRSS from version 1.21.0 to 1.22.1. Full release notes are available at https://github.com/FreshRSS/FreshRSS/releases.
+  🔔 FreshRSS on Umbrel is now configured to allow connections from your other RSS Reader apps like NetNewsWire!
+  
+  This release updates FreshRSS from version 1.22.1 to 1.23.1. Full release notes are available at https://github.com/FreshRSS/FreshRSS/releases.
 developer: FreshRSS Org
 website: https://freshrss.org/
 dependencies: []
