fix: update version and use multi arch sha

--- a/lnmarkets/umbrel-app.yml
+++ b/lnmarkets/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnmarkets
 category: bitcoin
 name: LN Markets
-version: "2.0.0"
+version: "2.0.1"
 tagline: The first instant settlement Bitcoin trading platform
 description: >-
   LN Markets is the first instant settlement Bitcoin trading platform. More info: linktr.ee/lnmarkets
@@ -27,4 +27,4 @@ path: ""
 submitter: LN Markets
 submission: https://github.com/getumbrel/umbrel/pull/879
 releaseNotes: >-
-  - Allow to login with both deprecated and correct LNURL method
+  - This is a minor bugfix release.
