add update warning

--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -41,6 +41,9 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
+  ⚠️ This update includes a new login flow for LNBits- make a note of previously used wallet URLs and user IDs.
+
+
   This release update takes LNBits to 0.12.1, and includes many major changes:
 
 
