Update LNBits to 0.12.1 (#973)

--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: bitcoin
 name: LNbits
-version: "0.11.3"
+version: "0.12.1"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -41,14 +41,17 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  This release updates LNbits to 0.11.3, and includes various bug fixes, improvements, and new features.
+  ⚠️ This update includes a new login flow for LNBits- make a note of previously used wallet URLs and user IDs.
 
 
-  - New service fee settings that lets you earn a transaction fee for all internal or external transaction on an LNbits instance.
+  This release update takes LNBits to 0.12.1, and includes many major changes:
 
-  - New funding source: Alby wallet
 
-  - Fiat balance in wallet 
+  - New powerful login system (Auth, Login, OAuth, create account with username and password)
+
+  - Better tools for querying transactions
+
+  - Mobile UI improvements 
 
   - LND REST bug fixes
 
