fix release notes

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -44,6 +44,6 @@ releaseNotes: >
   - Hide LN Balance when using an internal node and not a server admin
 
 
-  Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases/tag/v1.11.7.
+  Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
