--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -28,9 +28,19 @@ description: >-
   
   - Mobile alerts for new contacts, messages, and calls (supports UnifiedPush, FCM, APN)
 
-  Accounts are generally created by following a link provided by the service admin which includes a generated access code. The admin may alternatively distribute the access code directly which can be entered into the Create Account Screen in the mobile app. The link and access code are generated in the admin dashboard which is linked with the Cog in the upper right of the user login page.
+  🛠️ SET-UP INSTRUCTIONS 🛠️
 
-  Although the browser app will work over http, the mobile app requires https. Https is provided with the Cloudflare Tunnel app from the app store. Instructions on how to configure the tunnel are given in the wiki - https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
+
+  🆕 Creating Accounts: You can create accounts and account links from the Admin Dashboard.
+
+  - To access the admin dashboard, click on the settings cog icon located at the upper right corner of the app login page.
+
+  - Once you've installed the app, use the "default app password" that is displayed on Databag's page in the app store.
+
+
+  🌐 HTTPS Configuration: The browser version of the app can operate over http, but the mobile app requires https for secure communication. You can set up https using the Cloudflare Tunnel app available in the app store.
+  
+  - Detailed instructions for configuring the tunnel can be found in the wiki at this link: https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
 releaseNotes: ""
 dependencies: []
 developer: Pierre Balzack
