--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -38,13 +38,11 @@ description: >-
   - To access the admin dashboard, click on the settings cog icon located at the upper right corner of the app login page.
 
 
-  - Once you've installed the app, use the "default app password" that is displayed on Databag's page in the app store.
+  - Use the "default app password" that is displayed on Databag's page in the app store (shown after install).
 
 
-  🌐 HTTPS Configuration: The browser version of the app can operate over http, but the mobile app requires https for secure communication. You can set up https using the Cloudflare Tunnel app available in the app store.
-  
-  
-  - Detailed instructions for configuring the tunnel can be found in the wiki at this link: https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
+  🌐 HTTPS Configuration: The browser version of the app can operate over http, but the mobile app requires https. You can set up https using the Cloudflare Tunnel app available in the app store.
+  Detailed instructions for configuring the tunnel can be found here: https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
 releaseNotes: ""
 dependencies: []
 developer: Pierre Balzack
