--- a/nostrudel/umbrel-app.yml
+++ b/nostrudel/umbrel-app.yml
@@ -8,14 +8,7 @@ description: >-
   noStrudel is a nostr web client that is focused on exploring the nostr network.
 
   The focus is on power users or any other users who want to learn the inner workings of nostr.
-releaseNotes: >-
- - Support for nsecbunker and the new OAuth flow
- - Added simple "Launchpad" view (most stuff will be added in the future)
- - Restore scroll position when returning to the timeline
- - Show unavailable events in threads
- - Organized all the "other stuff" in a tools page
- - Added support to cache events in local relays instead of the browsers cache
-
+releaseNotes: ""
 developer: hzrd149
 website: https://github.com/hzrd149/nostrudel
 dependencies: []
