--- a/nostrudel/umbrel-app.yml
+++ b/nostrudel/umbrel-app.yml
@@ -16,9 +16,9 @@ repo: https://github.com/hzrd149/nostrudel
 support: https://github.com/hzrd149/nostrudel/issues
 port: 3149
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
