--- a/nostrudel/docker-compose.yml
+++ b/nostrudel/docker-compose.yml
@@ -8,11 +8,11 @@ services:
       PROXY_AUTH_ADD: "false"
 
   cors:
-    image: ghcr.io/hzrd149/docker-cors-anywhere:0.4.5
+    image: ghcr.io/hzrd149/docker-cors-anywhere:0.4.5@sha256:641f5ea3265acbc339a03a72b79cd942c4bedab9b1c8b3fc13e5f3f087f649e6
     environment:
       CORSANYWHERE_REQUIRE_HEADERS: "host"
   web:
-    image: ghcr.io/hzrd149/nostrudel:0.38.3
+    image: ghcr.io/hzrd149/nostrudel:0.38.3@sha256:cda4e5964e2f24f118547189819465682997fe8b3d6e0b688a3ae0685fed00da
     restart: on-failure
     stop_grace_period: 1m
     init: true
