--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -3,7 +3,7 @@ id: databag
 category: social
 name: Databag
 version: "0.1.4"
-tagline: A tiny self-hosted federated messenger for the decentralized web.
+tagline: A tiny self-hosted federated messenger for the decentralized web
 description: >-
   Databag is a self-hosted messaging service. Notable features include:
 
