--- a/watch-your-lan/umbrel-app.yml
+++ b/watch-your-lan/umbrel-app.yml
@@ -6,7 +6,8 @@ category: networking
 version: "1.0.6"
 port: 8840
 description: >-
-  Lightweight network IP scanner with web GUI
+  WatchYourLAN is a lightweight network IP scanner. It allows you to keep track of all devices that are connected to your local network.
+  
 releaseNotes: ""
 developer: aceberg
 website: https://github.com/aceberg/WatchYourLAN
