--- a/watch-your-lan/umbrel-app.yml
+++ b/watch-your-lan/umbrel-app.yml
@@ -1,13 +1,13 @@
 manifestVersion: 1
 id: watch-your-lan
 name: WatchYourLAN
-tagline: Lightweight network IP scanner with web GUI
+tagline: Lightweight network IP scanner
 category: networking
 version: "1.0.6"
 port: 8840
 description: >-
   WatchYourLAN is a lightweight network IP scanner. It allows you to keep track of all devices that are connected to your local network.
-  
+
 releaseNotes: ""
 developer: aceberg
 website: https://github.com/aceberg/WatchYourLAN
