--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -31,7 +31,7 @@ defaultUsername: ""
 deterministicPassword: true
 torOnly: false
 releaseNotes: >-
-  This is a minor bug-fix release, and includes FTL v5.24, and Core v5.17.3.
+  This is a minor bug-fix release, and includes FTL v5.24, Web 5.12, and Core v5.17.3.
 
 
   Full release notes can be found here: https://pi-hole.net/blog/2024/01/06/pi-hole-ftl-v5-24-and-core-v5-17-3-released/
