Update BTCPay to 1.12.5 (#978)

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: bitcoin
 name: BTCPay Server
-version: "1.12.3"
+version: "1.12.5"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,10 +34,16 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  🚨 If you are using plugins, you will most likely find them disabled after this update, because new versions compatible with BTCPay Server v1.12 are required. Please see the "Manage Plugins" section once updated.
+  This update brings BTCPay Server to version 1.12.5, and includes various bug fixes, and improvements.
 
 
-  This update brings BTCPay Server to version 1.12.3, and includes various bug fixes, improvements, and new features.
-  Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases/tag/v1.11.7.
+  - Improved checkout page load time by fetching the recommended fee in the background periodically
+
+  - Improved fee rate approximation by linear interpolation between known block targets
+
+  - Hide LN Balance when using an internal node and not a server admin
+
+
+  Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
