tweak release notes

--- a/gitea/umbrel-app.yml
+++ b/gitea/umbrel-app.yml
@@ -65,7 +65,8 @@ releaseNotes: >
   - Remove set tabindex on view issue
 
 
-  And more bugfixes, misc changes.
+  And more!
+
 
   A full list of new features, improvements, and bug fixes can be found here: https://github.com/go-gitea/gitea/releases.
 torOnly: false
