update release notes for 1.21.6

--- a/gitea/umbrel-app.yml
+++ b/gitea/umbrel-app.yml
@@ -42,30 +42,33 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This release updates Gitea from 1.21.0 to 1.21.5.
-
-
   SECURITY
 
-  - Prevent anonymous container access if RequireSignInView is enabled
+  - Fix XSS vulnerabilities
 
-  - Update go dependencies and fix go-git
+  - Use general token signing secret
   
   
   ENHANCEMENTS
   
-  - Make loading animation less aggressive
+  - Refactor git version functions and check compatibility
 
-  - Avoid duplicate JS error messages on UI
+  - Improve user experience for outdated comments
   
-  - Fix citation error when the file size is larger than 1024 bytes
+  - Hide code links on release page if user cannot read code
   
-  - Remove action runners on user deletion 
+  - Wrap contained tags and branches again
   
-  - Remove set tabindex on view issue
+  - Fix incorrect button CSS usages
+
+  - Strip trailing newline in markdown code copy
+
+  - Implement some action notifier functions
+
+  - Load outdated comments when (un)resolving conversation on PR timeline
 
 
-  And more!
+  As well as various bugfixes.
 
 
   A full list of new features, improvements, and bug fixes can be found here: https://github.com/go-gitea/gitea/releases.
