--- a/frigate/umbrel-app.yml
+++ b/frigate/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: frigate
 category: automation
 name: Frigate
-version: "0.12.1-367d724"
+version: "0.12.1"
 tagline: A complete and local NVR.
 description: >-
   A complete and local NVR designed for Home Assistant with AI object detection. 
@@ -12,7 +12,7 @@ developer:  Blake Blackshear
 website: https://frigate.video/
 repo: https://github.com/blakeblackshear/frigate
 support: https://github.com/blakeblackshear/frigate/issues
-port: 5000
+port: 5004
 gallery:
   - 1.jpg
   - 2.jpg
