add config explanation to app description

--- a/frigate/umbrel-app.yml
+++ b/frigate/umbrel-app.yml
@@ -7,6 +7,9 @@ tagline: A complete and local NVR.
 description: >-
   A complete and local NVR designed for Home Assistant with AI object detection. 
   Uses OpenCV and Tensorflow to perform realtime object detection locally for IP cameras.
+
+
+  You can configure your cameras directly within the Frigate app, there is no need to manually eidt the configuration files.
 releaseNotes: ""
 developer:  Blake Blackshear
 website: https://frigate.video/
