add deterministic password for RTSP

--- a/frigate/umbrel-app.yml
+++ b/frigate/umbrel-app.yml
@@ -22,7 +22,7 @@ gallery:
   - 3.jpg
 path: ""
 defaultUsername: ""
-defaultPassword: ""
+deterministicPassword: true
 dependencies: []
 submitter: ~dibref-labter
 submission: https://github.com/getumbrel/umbrel-apps/pull/843
