add more set-up instructions

--- a/frigate/umbrel-app.yml
+++ b/frigate/umbrel-app.yml
@@ -9,7 +9,13 @@ description: >-
   Uses OpenCV and Tensorflow to perform realtime object detection locally for IP cameras.
 
 
-  You can configure your cameras directly within the Frigate app, there is no need to manually eidt the configuration files.
+  🛠️ SET-UP
+
+
+  - You can configure your cameras directly within the Frigate app, there is no need to manually edit the configuration files.
+
+
+  - Your RTSP password (if needed) is the "default app password" that is displayed on Frigate's page in the app store (shown after install).
 releaseNotes: ""
 developer:  Blake Blackshear
 website: https://frigate.video/
