--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   web:
-    image: sethforprivacy/public-pool-ui:db286e5@sha256:cb931dd6c454a25a4ba446a9e47a035e15ba408498bd49181bd1ce204e1b8457
+    image: smolgrrr/public-pool-ui:8cd2563@sha256:95884d33475b1681cf645831aefadb0cc31a89c6f537ede643251bc874311804
     restart: on-failure
     stop_grace_period: 30s
     environment:
