--- a/public-pool/umbrel-app.yml
+++ b/public-pool/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: public-pool
 category: bitcoin
 name: Public Pool
-version: "ef2d2b8-hotfix"
+version: "820d8d1"
 tagline: Fully Open Source Solo Bitcoin Mining Pool
 description: >-
   Run your own Bitcoin Solo Mining Pool with no fees.
@@ -25,9 +25,9 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This hotfix update resolves an issue that was causing public-pool to persist old-blocks.
+  This update includes some performance improvements, and UI changes.
 
-  See changes here: https://github.com/benjamin-wilson/public-pool/commit/dadb03ed1cba6334acc009b79a389fb7b71e8567 
+  See changes here: https://github.com/benjamin-wilson/public-pool
 defaultPassword: ""
 submitter: smolgrrr
 submission: https://github.com/getumbrel/umbrel-apps/pull/915
