Update Jam to v0.2.0

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: jam
 category: bitcoin
 name: Jam
-version: "0.1.6"
+version: "0.2.0"
 tagline: Your sats. Your privacy. Your profit.
 description: >-
   Jam is a user-interface for JoinMarket with focus on
@@ -13,15 +13,13 @@ description: >-
 
   The app provides sensible defaults and is easy to use for beginners while still providing the features advanced users expect.
 releaseNotes: >-
-  - Import: Ability to import existing wallets
+  - Feature: You can now renew an expired fidelity bond in a straightforward manner
 
-  - Fees: Fee estimations and limits are now shown before sending collaborative transactions
+  - Fees: Sending funds now allows for customizable fee settings for both direct and collaborative sends
 
-  - New translations: Chinese, Italian, Brazilian Portuguese, German
+  - Version: It's now readily apparent what version of Jam you're running, along with what version of JoinMarket
 
-  - UI: Frozen balances are now shown at the jar level
-
-  - UI: Various interface enhancements and consistent styling
+  - UI: Various UI improvements and bugfixes
 developer: JoinMarket WebUI Org.
 website: https://jamapp.org
 dependencies:
