align to version 0.1.0

--- a/pinserver/docker-compose.yml
+++ b/pinserver/docker-compose.yml
@@ -7,21 +7,21 @@ services:
      APP_PORT: $APP_PINSERVER_WEB_PORT
 
   node:
-    image: tulipan81/blind_pin_server:v0.0.4@sha256:339974d80c2759900e1d7f155e32bf20f71e32fe9d7b9ad06440ba8d0a3b3bf9
+    image: tulipan81/blind_pin_server:v0.0.6@sha256:1a88495c6f66adc14727a40619217561cd94a58789ec25af37c3f3e7c4f06c43
     depends_on:
       - tor
       - web
     restart: on-failure
     stop_grace_period: 1m
     ports:
-      - $APP_PINSERVER_PORT:$APP_PINSERVER_PORT
+      - $APP_PINSERVER_PORT:8096
     volumes:
       - ${APP_DATA_DIR}/data/server_public_key.pub:/server_public_key.pub
       - ${APP_DATA_DIR}/data/server_private_key.key:/server_private_key.key
       - ${APP_DATA_DIR}/data/pins:/pins
 
   web: 
-    image: tulipan81/pinserver_web:v0.0.34@sha256:b5a8d94e3204dae157c7aa5cfe4f8ef7ef13c6ff953ade1a292042d432bbeb39
+    image: tulipan81/pinserver_web:v0.0.36@sha256:a5214dbc14538478744a6a0c6bd40f03ab8ac2990abc9038139c18901064205b
     depends_on: 
       - tor
     restart: on-failure
@@ -36,6 +36,7 @@ services:
       PINSERVER_PORT_A: ${APP_PINSERVER_PORT}
       PINSERVER_URL_B: ${APP_TAILSCALE_URL}
       PINSERVER_PORT_B: ${APP_PINSERVER_PORT}
+      PINSERVER_CERT: ""
   
   tor:
     image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
