--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ordinals
 category: bitcoin
 name: Ordinals
-version: "0.5.1"
+version: "0.15.0"
 tagline: Trustlessly view Ordinal inscriptions using your Bitcoin node.
 description: >
   A block explorer to trustlessly view Ordinal inscriptions. Search blocks, transactions, outputs, and individual satoshis.
@@ -12,7 +12,12 @@ description: >
 
 
   Disclaimer: The Ordinals app does not control, filter, or moderate the content hosted on the Bitcoin blockchain. Consequently, you may come across NSFW (Not Safe For Work), objectionable, or unlawful material while using the app.
-releaseNotes: ""
+releaseNotes: >-
+  🚨 This update requires a full re-indexing of the ord database due to a significant new release of ord that alters the database schema.
+  This is handled for you automatically by Umbrel when you update the app. 
+
+
+  This release updates Ord from version 0.5.1 to 0.15.0. Full release notes for Ord can be found at: https://github.com/ordinals/ord/releases
 developer: Casey Rodarmor
 website: https://ordinals.com/
 dependencies:
