tweak release notes

--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -42,18 +42,7 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  What's new in Bitcoin Knots version 25.1?
-
-
-  - P2P and network changes
-
-  - Security fixes
-
-  - New and updated RPCs
-  
-  - and more!
-
-
-  Read the full release notes for additional information and detailed changes at https://github.com/bitcoinknots/bitcoin/blob/v25.1.knots20231115/doc/release-notes.md
+  This release includes new features, various bug fixes and performance improvements, as well as updated translations. 
+  Read the full release notes at https://github.com/bitcoinknots/bitcoin/blob/v25.1.knots20231115/doc/release-notes.md
 submitter: Léo Haf
 submission: https://github.com/getumbrel/umbrel-apps/pull/953
