--- a/back-that-mac-up/umbrel-app.yml
+++ b/back-that-mac-up/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: back-that-mac-up
 category: files
 name: Back That Mac Up
-version: "1.0.0"
+version: "1.0.1"
 tagline: Backup your Mac to your Umbrel using Time Machine
 description: >
   Introducing Back That Mac Up — an official app by Umbrel.
@@ -16,7 +16,8 @@ description: >
 
 
   For seamless backups even when your Mac isn't connected to the same network as your Umbrel, simply install Tailscale on your Umbrel and your Mac, and use smb://umbrel as the server address.
-releaseNotes: ""
+releaseNotes: >-
+  This is a patch release to clarify the instructions in the app and improve the accuracy of current usage indicator.
 developer: Umbrel
 website: https://umbrel.com
 dependencies: []
