tweak release notes wording

--- a/back-that-mac-up/umbrel-app.yml
+++ b/back-that-mac-up/umbrel-app.yml
@@ -17,7 +17,7 @@ description: >
 
   For seamless backups even when your Mac isn't connected to the same network as your Umbrel, simply install Tailscale on your Umbrel and your Mac, and use smb://umbrel as the server address.
 releaseNotes: >-
-  This is a patch release to clarify the instructions in the app and improve the accuracy of current usage indicator.
+  This is a patch release to clarify the instructions in the app and improve the accuracy of the current usage indicator.
 developer: Umbrel
 website: https://umbrel.com
 dependencies: []
