--- a/audiobookshelf/umbrel-app.yml
+++ b/audiobookshelf/umbrel-app.yml
@@ -3,7 +3,7 @@ id: audiobookshelf
 name: Audiobookshelf
 tagline: Audiobook and podcast server
 category: media
-version: "2.7.1"
+version: "2.8.0"
 port: 13378
 description: >-
   Features:
@@ -61,18 +61,23 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release brings audiobookshelf from version 2.6.0 to 2.7.1. 
-
-  Note: OpenID Connect Authentication requires mobile app v0.9.70-beta or up
+  This release brings audiobookshelf from version 2.7.1 to 2.8.0. 
 
 
   Added
 
-  - Year in review stats images to user stats page
+  - Allow adding a custom message on login page (from auth config page)
 
-  - Ability to fetch book data in uploader
+  - Ability to add custom metadata providers (from item metadata utils) 
 
-  - Zoom controls to comic reader
+  - Crash logs are stored in /metadata/logs/crash_logs.txt
+
+  - Portuguese (Brazil) translations
+
+  - Podcast library setting to set iTunes search region
+
+  - OpenID: Edit user modal shows button to unlink user from OpenID
+  
 
   Plus many fixes and changes...
 
