--- a/esphome/umbrel-app.yml
+++ b/esphome/umbrel-app.yml
@@ -21,14 +21,13 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  🔔 ESPHome on Umbrel can now automatically find devices on your local network, thanks to a switch to host network mode.
+  🔔 Reminder that ESPHome on Umbrel can now automatically find devices on your local network, thanks to a switch to host network mode.
 
 
   ⚠️ As usual, please check that your configurations are still working correctly after updating.
 
   
-  This release updates ESPHome from version 2023.11.6.4 to 2023.12.9. A full list of new features, new component support, breaking changes, and bug fixes for versions 
-  between 2023.11.6.4 to 2023.12.9 can be found here: https://github.com/esphome/esphome/releases.
-  
+  This release updates ESPHome from version 2023.12.9 to 2024.2.2. A full list of new features, new component support, breaking changes, and bug fixes for versions 
+  between 2023.12.9 and 2024.2.2 can be found at https://github.com/esphome/esphome/releases.
 submitter: ShonP40
 submission: https://github.com/getumbrel/umbrel-apps/pull/43
