--- a/firefly-iii-importer/umbrel-app.yml
+++ b/firefly-iii-importer/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: firefly-iii-importer
 category: finance
 name: Firefly III Importer
-version: "1.4.0"
+version: "1.4.4"
 tagline: Import your transactions into Firefly III
 description: >-
   Firefly III is a manager for your personal finances. The data importer is built to help you import transactions into Firefly III. It is separated from Firefly III for security and maintenance reasons.
@@ -29,6 +29,10 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
-releaseNotes: ""
+releaseNotes: >-
+  ⚠️ Some changes in this release may unexpectedly lead to duplicate transactions.
+
+
+  Full release notes can be found at https://github.com/firefly-iii/data-importer/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/948
