--- a/firefox/docker-compose.yml
+++ b/firefox/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3000
 
   server:
-    image: linuxserver/firefox:latest@sha256:be70f1c6d622ac620ce16d06b8f0588a9d7badc31ae235adc7f776c1eb53092a
+    image: linuxserver/firefox:122.0@sha256:be70f1c6d622ac620ce16d06b8f0588a9d7badc31ae235adc7f776c1eb53092a
     restart: on-failure
     environment:
       - PUID=1000
