--- a/firefox/umbrel-app.yml
+++ b/firefox/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: firefox
 category: networking
 name: Firefox
-version: "116.0.3"
+version: "122.0"
 tagline: Firefox is a free and open-source web browser
 description: >-
   Get the browser that protects what is important.
@@ -19,16 +19,18 @@ description: >-
 
   Available in over 90 languages, and compatible with Windows, Mac and Linux machines, Firefox works no matter what you are using or where you are. Make sure your operating system is up to date for the best experience.
 releaseNotes: >-
-  - Fixed an issue for OPFS users (especially those using the Adobe Photoshop) that broke access to files that were locally cached in a previous version. (bug 1847989, bug 1847619)
+  - Firefox now displays images and descriptions for search suggestions when provided by the search engine.
 
-  - Fixed an issue that was breaking screensharing for some users on Wayland. (bug 1841851)
+  - The translations feature received an improvement in the quality of translated webpages. The results should be much more stable. This fixes issues where the content of a page could disappear when translated, or interactive widgets could break.
 
-  - Fixed an issue where a fullscreen notification was persistently being shown to a user, even after disabling it. (bug 1847901)
+  - MDN Web Docs article suggestions from Firefox Suggest will be available in the address bar for users searching for web development-related information.
 
-  - Fixed an issue where Firefox would hang when doing a Google search. (bug 1847066)
+  - Various security fixes.
+
+  - and more!
 
 
-  Full release notes are available at https://www.mozilla.org/en-US/firefox/116.0.3/releasenotes
+  Full release notes are available at https://www.mozilla.org/en-US/firefox/122.0/releasenotes
 developer: Mozilla Foundation
 website: https://www.mozilla.org/en-US/firefox/
 dependencies: []
