--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: bitcoin
 name: LNbits
-version: "0.12.1"
+version: "0.12.2"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -41,23 +41,12 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  ⚠️ This update includes a new login flow for LNBits- make a note of previously used wallet URLs and user IDs.
+  ⚠️ Reminder that the previous update included a new login flow for LNBits - make a note of previously used wallet URLs and user IDs.
 
 
-  This release update takes LNBits to 0.12.1, and includes many major changes:
+  This is a minor release that includes bug fixes and improvements.
 
 
-  - New powerful login system (Auth, Login, OAuth, create account with username and password)
-
-  - Better tools for querying transactions
-
-  - Mobile UI improvements 
-
-  - LND REST bug fixes
-
-  - and more!
-
-
-  📄 Full Release Notes and detailed information is available at: https://github.com/lnbits/lnbits/releases
+  📄 Full Release Notes and detailed information is available at https://github.com/lnbits/lnbits/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/372
