--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: metube
 category: media
 name: MeTube
-version: "2023.11.16"
+version: "2024-01-26"
 tagline: Download videos from YouTube
 description: >-
   Download videos from YouTube (and dozens of other sites) directly to your Umbrel.
@@ -10,7 +10,8 @@ developer: Alex Shnitman
 dependencies: []
 repo: https://github.com/alexta69/metube
 port: 3700
-releaseNotes: ""
+releaseNotes: >-
+  This update includes the ability to retry all failed downloads, the ability to cancel downloads before they start, and displays file sizes for all downloads.
 support: https://github.com/alexta69/metube/issues
 website: https://github.com/alexta69/metube
 gallery:
