--- a/chatpad-ai/umbrel-app.yml
+++ b/chatpad-ai/umbrel-app.yml
@@ -3,7 +3,7 @@ id: chatpad-ai
 category: ai
 name: Chatpad AI
 # using first 6 characters of commit hash as version number (docker image tag uses full commit hash)
-version: "e8240a"
+version: "f45cd5"
 tagline: Premium quality UI for ChatGPT
 description: >-
   Chatpad AI is an alternative user interface for OpenAI's chat models. Simply add your OpenAI API key and you're ready to go!
@@ -24,6 +24,6 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - Add support for latest OpenAI API & models
+  This release adds support for multiple languages, and includes many performance improvements and bug fixes.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/604
