Update heimdall to 2.6.1

--- a/heimdall/umbrel-app.yml
+++ b/heimdall/umbrel-app.yml
@@ -3,7 +3,7 @@ id: heimdall
 name: Heimdall
 tagline: Organize your most used web sites in a simple way
 category: files
-version: "2.5.8"
+version: "2.6.1"
 port: 7392
 description: >-
   Heimdall is a dashboard for all your web applications. It doesn't need to be limited to applications though, you can add links to anything you like.
@@ -28,19 +28,20 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >
-  This release updates Heimdall from v2.5.6 to v2.5.8. It includes many bug fixes and performance improvements, as well as the following new features:
-
-  - Fix and add SVG support 
-
-  - Add issue-pr workflows
+  This release updates Heimdall from v2.5.8 to v2.6.1. It includes many bug fixes and performance improvements, as well as the following new features:
   
-  - Fix sortable tooltip 
 
-  - Remove register route
+  - Add html5 required fields so images don't get broken when title or url are missing
+
+  - Set the pinned attribute to true by default on items and tags
   
-  - Add Trianglify background option
+  - Add the list of tags to the application list
 
-  - Validate icons to be images
+  - Add search via select2 for application dropdown
+  
+  - Fix languages dropdown
+
+  - Fix and add SVG support
 
 
   The full release notes are available at https://github.com/linuxserver/Heimdall/releases
