minor release notes update

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -50,11 +50,11 @@ releaseNotes: >-
 
   This update takes Immich to version 1.97.0, and includes the following changes:
 
-  - Search for people on the people page.
+  - Fix the issue with the toggle button on the web app that doesn't conform to state change
 
-  - Additional video transcoding options for audio and video codecs.
+  - Fix the wrong aspect ratio of the preview image in the memory view
 
-  - Automatically update the external libraries when the filesystem changes
+  - Fixes thumbnail size with blur and alignment in video player
 
   - and more!
 
