changes for persistance

--- a/frigate/docker-compose.yml
+++ b/frigate/docker-compose.yml
@@ -16,6 +16,7 @@ services:
      - /dev:/dev
     volumes:
       - /etc/localtime:/etc/localtime:ro
+      - ${APP_DATA_DIR}/data/config:/config
       - ${APP_DATA_DIR}/data/config.yml:/config/config.yml
       - ${APP_DATA_DIR}/data/storage:/media/frigate
       - type: tmpfs # Optional: 1GB of memory, reduces SSD/SD Card wear
