prepare for lightning widgets

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -67,10 +67,10 @@ widgets:
       valueSub: "sats"
       buttons:
         - text: "Send"
-          icon: "arrow-up-right"
+          icon: "send"
           link: "?action=send-bitcoin"
         - text: "Receive"
-          icon: "arrow-down-right"
+          icon: "inbox"
           link: "?action=receive-bitcoin"
   - id: "lightning-wallet"
     type: "stat-with-buttons"
@@ -85,10 +85,10 @@ widgets:
       valueSub: "sats"
       buttons:
         - text: "Send"
-          icon: "arrow-up-right"
+          icon: "send"
           link: "?action=send-lightning"
         - text: "Receive"
-          icon: "arrow-down-right"
+          icon: "inbox"
           link: "?action=receive-lightning"
   - id: "lightning-stats"
     type: "four-up"
