--- a/back-that-mac-up/umbrel-app.yml
+++ b/back-that-mac-up/umbrel-app.yml
@@ -33,15 +33,15 @@ deterministicPassword: false
 torOnly: false
 widgets:
   - id: "disk-usage"
-    type: "stat-with-progress"
+    type: "text-with-progress"
     refresh: "1m"
     endpoint: "server:80/api/widgets/disk-usage"
     link: ""
     example:
-      type: "stat-with-progress"
+      type: "text-with-progress"
       link: ""
       title: "Time Machine Usage"
-      value: "420 GB"
+      text: "420 GB"
       progressLabel: "580 GB left"
       progress: 0.42
 submitter: Umbrel
