--- a/transmission/umbrel-app.yml
+++ b/transmission/umbrel-app.yml
@@ -43,26 +43,26 @@ permissions:
   - STORAGE_DOWNLOADS
 widgets:
   - id: "status"
-    type: "four-up"
+    type: "four-stats"
     refresh: "10s"
     endpoint: "widget-server:80/widgets/status"
     link: ""
     example:
-      type: "four-up"
+      type: "four-stats"
       link: ""
       items:
         - title: "Downloading"
-          value: "3"
-          valueSub: "torrents"
+          text: "3"
+          subtext: "torrents"
         - title: "Seeding"
-          value: "1"
-          valueSub: "torrents"
+          text: "1"
+          subtext: "torrents"
         - title: "Stopped"
-          value: "0"
-          valueSub: "torrents"
+          text: "0"
+          subtext: "torrents"
         - title: "Queued"
-          value: "2"
-          valueSub: "torrents"
+          text: "2"
+          subtext: "torrents"
   - id: "torrent-list"
     type: "list"
     refresh: "5s"
@@ -73,10 +73,10 @@ widgets:
       link: ""
       items:
         - text: "33% • Ubuntu 22.04.3 amd64 ISO image"
-          textSub: "↓4.4Mbps ↑1.2Mbps"
+          subtext: "↓4.4Mbps ↑1.2Mbps"
         - text: "100% • Ubuntu 21.1.0 amd64 ISO image"
-          textSub: "↓0Mbps ↑78Kbps"
+          subtext: "↓0Mbps ↑78Kbps"
         - text: "100% • Debian 11.0 amd64 ISO image"
-          textSub: "↓0Mbps ↑827Kbps"
+          subtext: "↓0Mbps ↑827Kbps"
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/60878f278d544b204d8e7c96240c797f43a9b319
