--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -57,36 +57,36 @@ releaseNotes: >-
   Read the full release notes for additional information and detailed changes at https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-26.0.md
 widgets:
   - id: "stats"
-    type: "four-up"
+    type: "four-stats"
     refresh: "10s"
     endpoint: "server:3005/v1/bitcoind/widgets/stats"
     link: ""
     example:
-      type: "four-up"
+      type: "four-stats"
       link: ""
       items:
         - title: "Connections"
-          value: "11"
-          valueSub: "peers"
+          text: "11"
+          subtext: "peers"
         - title: "Mempool"
-          value: "257"
-          valueSub: "MB"
+          text: "257"
+          subtext: "MB"
         - title: "Hashrate"
-          value: "590"
-          valueSub: "EH/s"
+          text: "590"
+          subtext: "EH/s"
         - title: "Blockchain size"
-          value: "600"
-          valueSub: "GB"
+          text: "600"
+          subtext: "GB"
   - id: "sync"
-    type: "stat-with-progress"
+    type: "text-with-progress"
     refresh: "5s"
     endpoint: "server:3005/v1/bitcoind/widgets/sync"
     link: ""
     example:
-      type: "stat-with-progress"
+      type: "text-with-progress"
       link: ""
       title: "Blockchain sync"
-      value: "83%"
+      text: "83%"
       progressLabel: "In progress"
       progress: 0.83
 submitter: Umbrel
