--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -55,16 +55,16 @@ path: ""
 defaultPassword: ""
 widgets:
   - id: "bitcoin-wallet"
-    type: "stat-with-buttons"
-    refresh: "1m"
+    type: "text-with-buttons"
+    refresh: "30s"
     endpoint: "app:3006/v1/lnd/widgets/bitcoin-wallet"
     link: ""
     example:
-      type: "stat-with-buttons"
+      type: "text-with-buttons"
       link: ""
       title: "Bitcoin Wallet"
-      value: "1,845,893"
-      valueSub: "sats"
+      text: "1,845,893"
+      subtext: "sats"
       buttons:
         - text: "Send"
           icon: "send"
@@ -73,16 +73,16 @@ widgets:
           icon: "inbox"
           link: "?action=receive-bitcoin"
   - id: "lightning-wallet"
-    type: "stat-with-buttons"
-    refresh: "1m"
+    type: "text-with-buttons"
+    refresh: "30s"
     endpoint: "app:3006/v1/lnd/widgets/lightning-wallet"
     link: ""
     example:
-      type: "stat-with-buttons"
+      type: "text-with-buttons"
       link: ""
       title: "Lightning Wallet"
-      value: "762,248"
-      valueSub: "sats"
+      text: "762,248"
+      subtext: "sats"
       buttons:
         - text: "Send"
           icon: "send"
@@ -91,25 +91,25 @@ widgets:
           icon: "inbox"
           link: "?action=receive-lightning"
   - id: "lightning-stats"
-    type: "four-up"
-    refresh: "1m"
+    type: "four-stats"
+    refresh: "30s"
     endpoint: "app:3006/v1/lnd/widgets/lightning-stats"
     link: ""
     example:
-      type: "four-up"
+      type: "four-stats"
       link: ""
       items:
         - title: "Connections"
-          value: "5"
-          valueSub: "peers"
+          text: "5"
+          subtext: "peers"
         - title: "Active channels"
-          value: "3"
-          valueSub: "channels"
+          text: "3"
+          subtext: "channels"
         - title: "Max send"
-          value: "90K"
-          valueSub: "sats"
+          text: "90K"
+          subtext: "sats"
         - title: "Max receive"
-          value: "45K"
-          valueSub: "sats"
+          text: "45K"
+          subtext: "sats"
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/576ecd2bef8d625abceed0f67ec9c487da9b2b1b
