--- a/nostr-relay/umbrel-app.yml
+++ b/nostr-relay/umbrel-app.yml
@@ -41,7 +41,7 @@ torOnly: false
 widgets:
   - id: "latest-kind1"
     type: "list"
-    refresh: "30s"
+    refresh: "10s"
     endpoint: "relay-proxy:80/relay-proxy/widgets/latest-kind1"
     link: ""
     example:
@@ -49,14 +49,14 @@ widgets:
       link: ""
       items:
         - text: "one-click app restarts, arriving in umbrelOS 1.0"
-          textSub: "01:11 Mar 02, 2024"
+          subtext: "01:11 Mar 02, 2024"
         - text: "woop! glad it arrived before christmas! welcome aboard 🫡"
-          textSub: "03:07 Dec 28, 2023"
+          subtext: "03:07 Dec 28, 2023"
         - text: "Congrats! Can’t wait for you to get your hands on it 🫶"
-          textSub: "11:40 Nov 24, 2023"
+          subtext: "11:40 Nov 24, 2023"
   - id: "latest-events"
     type: "list-emoji"
-    refresh: "30s"
+    refresh: "10s"
     endpoint: "relay-proxy:80/relay-proxy/widgets/latest-events"
     link: ""
     example:
