Update ghostfolio to 2.61.0 (#1011)

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "2.51.0"
+version: "2.61.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,29 +31,29 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This release upgrades Ghostfolio from v2.28.0 to v2.51.0, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
+  This release upgrades Ghostfolio from v2.51.0 to v2.61.0, and includes numerous bug fixes, performance improvements, and new features. Here's what's new in the latest version:
   
 
   Added:
 
-    - Introduced a setting to disable the data gathering in the admin control
+    - Added an index for isExcluded to the account database table
 
-    - Added a button to apply the active filters in the assistant
+    - Extended the content of the Self-Hosting section on the Frequently Asked Questions (FAQ) page
 
 
   Changed:
 
 
-    - Improved the ordered list of the Top 3 and Bottom 3 performers on the analysis page in Safari
+    - Optimized the calculation of the portfolio summary
 
-    - Harmonized the environment variables of various API keys
+    - Improved the activities import by isin in the Yahoo Finance service
 
-    - Moved the assistant from experimental to general availability
+    - Improved the handling of activities without account
   
 
   Fixed:
 
-    - Fixed the date conversion of the import of historical market data in the admin control panel
+    - Fixed the the activities import
     
 
   For full release notes and additional changes from previous versions, please visit: https://github.com/ghostfolio/ghostfolio/releases
