update submission number

--- a/saifa/umbrel-app.yml
+++ b/saifa/umbrel-app.yml
@@ -17,6 +17,7 @@ releaseNotes: >-
   - Enhanced Invoice Operations: Users now have the ability to add and cancel invoices directly from the simple UI. This enhancement streamlines the invoice management process, making it more accessible and convenient for our users.
 developer: patra nakamo
 website: https://github.com/patranakamo
+email: patranakamo@gmail.com
 dependencies:
   - bitcoin
   - lnd
@@ -32,4 +33,4 @@ defaultUsername: ""
 defaultPassword: ""
 submitter: patra nakamo
 torOnly: false
-submission: https://github.com/getumbrel/umbrel/pull/999
+submission: https://github.com/getumbrel/umbrel/pull/1021
