--- a/transmission/docker-compose.yml
+++ b/transmission/docker-compose.yml
@@ -22,6 +22,6 @@ services:
   widget-server:
     image: getumbrel/umbrel-transmission-widget-server:v1.0.0@sha256:db39ed3471686bf2b900dfa568f41d31c0b2a7fbc4df632e61b583c6978ba686
     environment:
-      - TRANSMISSION_URL=http://server
+      - TRANSMISSION_URL=http://transmission_server_1
       - TRANSMISSION_PORT=9091
     restart: on-failure
