update release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,21 +45,9 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ Your mobile app must be on at least version 1.97.0 to work with this release of Immich.
+  ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
 
-
-  This update takes Immich to version 1.97.0, and includes the following changes:
-
-  - Fix the issue with the toggle button on the web app that doesn't conform to state change
-
-  - Fix the wrong aspect ratio of the preview image in the memory view
-
-  - Fixes thumbnail size with blur and alignment in video player
-
-  - and more!
-
-
-  Full release notes are found at: https://github.com/immich-app/immich/releases
+  Full release notes for v1.98.2 are found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
