Update immich to v1.98.2 (#993)
Co-authored-by: smolgrrr <smolgrrr@protonmail.com>
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.94.1"
+version: "v1.98.2"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -45,21 +45,10 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ Your mobile app must be on at least version 1.94.0 to work with this release of Immich.
+  ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
 
 
-  This update takes Immich to version 1.94.1, and includes the following changes:
-
-  - Search for people on the people page.
-
-  - Additional video transcoding options for audio and video codecs.
-
-  - Automatically update the external libraries when the filesystem changes
-
-  - and more!
-
-
-  Full release notes are found at: https://github.com/immich-app/immich/releases
+  Full release notes for v1.98.2 are found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
