Update lightning widgets

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -63,14 +63,14 @@ widgets:
       type: "text-with-buttons"
       link: ""
       title: "Bitcoin Wallet"
-      text: "1,845,893"
+      text: "1,845,894"
       subtext: "sats"
       buttons:
-        - text: "Send"
-          icon: "send"
+        - text: "Withdraw"
+          icon: "arrow-up-right"
           link: "?action=send-bitcoin"
-        - text: "Receive"
-          icon: "inbox"
+        - text: "Deposit"
+          icon: "arrow-down-right"
           link: "?action=receive-bitcoin"
   - id: "lightning-wallet"
     type: "text-with-buttons"
@@ -85,10 +85,10 @@ widgets:
       subtext: "sats"
       buttons:
         - text: "Send"
-          icon: "send"
+          icon: "arrow-up-right"
           link: "?action=send-lightning"
         - text: "Receive"
-          icon: "inbox"
+          icon: "arrow-down-right"
           link: "?action=receive-lightning"
   - id: "lightning-stats"
     type: "four-stats"
