--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -42,19 +42,17 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  What's new in Bitcoin Core version 26.0?
+  🎉 New widgets are here for umbrelOS 1.0
 
 
-  - P2P and network changes
+  This update brings two new widgets for the Bitcoin Node app, allowing you to keep an eye on your node's stats and sync progress right from your dashboard:
 
-  - Pruning changes: Improved handling of prune budget when using assumeutxo with -prune.
+  - Node Stats: A widget that displays the number of peer connections, mempool size, hashrate, and blockchain size of your node.
 
-  - New and updated RPCs
-  
-  - and more!
+  - Sync Progress: A widget that shows your node's synchronization progress.
 
 
-  Read the full release notes for additional information and detailed changes at https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-26.0.md
+  You can enable up to three widgets right from your dashboard by right clicking on the dashboard and selecting "Edit widgets", or by clicking on the widget selector in the Dock. 
 widgets:
   - id: "stats"
     type: "four-stats"
