--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -42,7 +42,7 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  🎉 New widgets are here for umbrelOS 1.0
+  🎉 New widgets are here for umbrelOS 1.0.
 
 
   This update brings two new widgets for the Bitcoin Node app, allowing you to keep an eye on your node's stats and sync progress right from your dashboard:
