--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -52,7 +52,7 @@ releaseNotes: >-
   - Sync Progress: A widget that shows your node's synchronization progress.
 
 
-  You can enable up to three widgets right from your dashboard by right clicking on the dashboard and selecting "Edit widgets", or by clicking on the widget selector in the Dock. 
+  With umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
 widgets:
   - id: "stats"
     type: "four-stats"
