add release notes to remaining apps

--- a/back-that-mac-up/umbrel-app.yml
+++ b/back-that-mac-up/umbrel-app.yml
@@ -17,7 +17,13 @@ description: >
 
   For seamless backups even when your Mac isn't connected to the same network as your Umbrel, simply install Tailscale on your Umbrel and your Mac, and use smb://umbrel as the server address.
 releaseNotes: >-
-  This is a patch release to clarify the instructions in the app and improve the accuracy of the current usage indicator.
+  🎉 New widgets are here for umbrelOS 1.0.
+
+
+  This update brings a new widgets for Back That Mac Up, allowing you to see your Time Machine usage at a glance right from your Umbrel's home screen.
+
+
+  With umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
 developer: Umbrel
 website: https://umbrel.com
 dependencies: []
