--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -45,7 +45,7 @@ releaseNotes: >-
   🎉 New widgets are here for umbrelOS 1.0.
 
 
-  This update brings two new widgets for the Bitcoin Node app, allowing you to keep an eye on your node's stats and sync progress right from your dashboard:
+  This update brings two new widgets for the Bitcoin Node app, allowing you to keep an eye on your node's stats and its sync progress right from your Umbrel's home screen:
 
   - Node Stats: A widget that displays the number of peer connections, mempool size, hashrate, and blockchain size of your node.
 
