--- a/transmission/umbrel-app.yml
+++ b/transmission/umbrel-app.yml
@@ -33,12 +33,20 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  This release updates Transmission from version 4.0.3 to 4.0.4.
+  🎉 New widgets are here for umbrelOS 1.0.
 
-  This is a bugfix-only release.
-  
 
-  Full release notes are available at https://github.com/transmission/transmission/releases
+  This update brings two new widgets for Transmission, allowing you to monitor the status of your torrents right from your Umbrel's home screen:
+
+  - Status: A widget that displays the number of downloading, seeding, stopped, and queued torrents.
+
+  - Active Torrents Monitor: A widget that shows your active torrents and their download and upload speeds.
+
+
+  With umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
+
+
+  This release also updates Transmission to version 4.0.5. Full release notes are available at https://github.com/transmission/transmission/releases
 permissions:
   - STORAGE_DOWNLOADS
 widgets:
