--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -25,10 +25,10 @@ releaseNotes: >-
   🎉 New widgets are here for umbrelOS 1.0.
 
 
-  This update brings three new widgets for the Lightning Node app, allowing you to keep an eye on your node's stats, bitcoin wallet, and lightning wallet right from your Umbrel's home screen:
+  This update brings three new widgets for the Lightning Node app, allowing you to keep an eye on your node's stats, Bitcoin balance, and Lightning balance right from your Umbrel's home screen:
 
 
-  - Node Stats: A widget that displays the number of peer connections, number of active channels, max send, and max receive.
+  - Node Stats: A widget that displays the number of peer connections, number of active channels, max send, and max receive for your node.
 
 
   - Bitcoin Wallet: A widget that shows the balance of your Bitcoin wallet and has shortcuts to send and receive Bitcoin in the Lightning Node app.
