Update tailscale to 1.62.0

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: networking
 name: Tailscale
-version: "v1.56.1"
+version: "v1.62.0"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -28,13 +28,19 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: |
-  This release updates Tailscale from v1.52.0 to v1.56.1 which includes: 
+  This release updates Tailscale from v1.56.1 to v1.62.0 which includes: 
   
-  - improve responsiveness under load, especially with bidirectional traffic
-  - improve UPnP portmapping
-  - add tailscale whois subcommand to observe metadata associated with a Tailscale IP
-  - include tailnet name and profile ID in tailscale switch --list to disambiguate profiles with common login names
+
+  - Web interface now uses ACL grants to manage access on tagged devices
+
+  - Tailscale SSH connections now disable unnecessary hostname canonicalization
+
+  - Exposing port 8080 to other devices on your tailnet works as expected
+
+  - Rresent users with a valid login page when attempting to login even after leaving device unattended for several days
+
   - and many more improvements/fixes..
+
 
   Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
