--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       APP_PORT: 1984
 
   web:
-    image: ghcr.io/impa10r/peerswap-web:v1.1.3@sha256:7b2c1f692d7616566a09ea888fdb2476515f91390c70a668a3bb3fdc72f837e0
+    image: ghcr.io/impa10r/peerswap-web:v1.1.7@sha256:sha256:6cf947ca1e26d361b06210bb6b48a9f2e6533d1fa369371ac6ef14f299e702fe
+    user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     environment:
