--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       ELEMENTS_HOST: http://elements_node_1
       ELEMENTS_WALLET: peerswap
       ELEMENTS_FOLDER: /home/elements/.elements
-      ELEMENTS_FOLDER_MAPPED: /root/.elements
+      ELEMENTS_FOLDER_MAPPED: /home/peerswap/.elements
     volumes:
-      - ${APP_DATA_DIR}/data:/root/.peerswap
-      - ${APP_LIGHTNING_NODE_DATA_DIR}:/root/.lnd:ro
-      - /home/umbrel/umbrel/app-data/elements/data:/root/.elements:ro
+      - ${APP_DATA_DIR}/data:/home/peerswap/.peerswap
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/home/peerswap/.lnd:ro
+      - /home/umbrel/umbrel/app-data/elements/data:/home/peerswap/.elements:ro
