--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       NETWORK: $APP_BITCOIN_NETWORK
       # LND
       LND_HOST: ${APP_LIGHTNING_NODE_IP}:${APP_LIGHTNING_NODE_GRPC_PORT}
-      LND_MACAROONPATH: /root/.lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/admin.macaroon
+      LND_MACAROONPATH: /home/peerswap/.lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/admin.macaroon
       # Elements RPC
       ELEMENTS_USER: elements
       ELEMENTS_PORT: $APP_ELEMENTS_NODE_RPC_PORT
